 o hostip: remove leftover INT_MAX check in Curl_dnscache_prune [88]
 o http: handle user-defined connection headers [165]
 o http: make Content-Length parser more WHATWG [183]
 o httpsrr: free old pointers when storing new [57]
 o INSTALL-CMAKE.md: document useful build targets [215]
 o INTERNALS: drop Winsock 2.2 from the dependency list [162]
 o ip-happy: do not set unnecessary timeout [95]
 o ip-happy: prevent event-based stall on retry [155]
 o krb5: return appropriate error on send failures [22]
 o krb5_sspi: the chlg argument is NOT optional [200]
 o ldap: do not base64 encode zero length string [42]
 o ldap: tidy-up types, fix error code confusion [191]
 o lib: drop unused include and duplicate guards [226]
 o lib: fix build error and compiler warnings with verbose strings disabled [173]
 o lib: remove personal names from comments [168]
 o lib: upgrade/multiplex handling [136]
 o libcurl-multi.md: added curl_multi_get_offt mention [53]
 o libcurl-security.md: mention long-running connections [6]
 o libssh2/sftp_realpath: change state consistently [185]
 o libssh2: bail out on chgrp and chown number parsing errors [202]
 o libssh2: clarify that sshp->path is always at least one byte [201]
 o libssh2: drop two redundant null-terminations [26]
 o libssh2: error check and null-terminate in ssh_state_sftp_readdir_link() [34]
 o libssh2: fix return code for EAGAIN [186]
 o libssh: acknowledge SSH_AGAIN in the SFTP state machine [89]
 o libssh: clarify myssh_block2waitfor [92]
 o libssh: drop two unused assignments [104]
 o libssh: error on bad chgrp number [71]
 o libssh: error on bad chown number and store the value [64]
 o libssh: fix range parsing error handling mistake [120]
 o libssh: react on errors from ssh_scp_read [24]
 o libssh: return out of memory correctly if aprintf fails [60]
 o Makefile.example: fix option order [231]
 o Makefile.example: simplify and make it configurable [20]
 o managen: ignore version mentions < 7.66.0 [55]